--- a/theme/solar_for_githubpages/layout.html
+++ b/theme/solar_for_githubpages/layout.html
@@ -14,18 +14,14 @@
 {# put the sidebar before the body #}
 {% block sidebar1 %}{{ sidebar() }}{% endblock %}
 {% block sidebar2 %}{% endblock %}
-{% block sidebarlogo %}<label><input id="scroll" type="checkbox"> scroll sidebar</label>{% endblock%}
+{% block sidebarlogo %}<label><input id="scroll" type="checkbox" checked> scroll sidebar</label>{% endblock%}
 {% block sidebartoc %}
 {{ super() }}
 {% endblock %}
 {%- block footer %}
     <div class="footer">
     {%- if show_copyright %}
-      {%- if hasdoc('copyright') %}
-        {% trans path=pathto('copyright'), copyright=copyright|e %}&copy; <a href="{{ path }}">Copyright</a> {{ copyright }}.{% endtrans %}
-      {%- else %}
-        {% trans copyright=copyright|e %}&copy; Copyright {{ copyright }}.{% endtrans %}
-      {%- endif %}
+      {% trans copyright=copyright|e %}{{ copyright }}{% endtrans %}
     {%- endif %}
     {%- if last_updated %}
       {% trans last_updated=last_updated|e %}Last updated on {{ last_updated }}.{% endtrans %}
@@ -68,6 +64,13 @@
     	});
     	
 	});
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-46550814-1', 'terasolunaorg.github.io');
+    ga('send', 'pageview');
     </script>
     
 {%- endblock %}
